<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/workexperience"
    tools:context=".mycorse">

    <LinearLayout
        android:id="@+id/lltp"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@color/backtint"
        android:orientation="horizontal">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadani"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/circimg"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.745"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/educationcap" />

        <TextView
            android:id="@+id/tvedutext"
            android:layout_width="217dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/newradious"
            android:backgroundTint="@color/backtint"
            android:backgroundTintMode="add"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/corse"
            android:textAlignment="center"
            android:textColor="@color/paret"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="401dp"
        android:layout_height="693dp"
        android:layout_below="@+id/lltp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="7dp"
        android:background="#A1000000"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lltp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/backtint"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/javadetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/newradious"
                android:backgroundTint="#79EDD3D3"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="354dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/javaheding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/java_programing"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/javfrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/great_learning"
                        android:textSize="18sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/febrruary_2024"
                        android:textSize="18sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/newradious"
                android:backgroundTint="#79EDD3D3"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="354dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/google_ads_creations"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textSize="18sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textSize="18sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/newradious"
                android:backgroundTint="#79EDD3D3"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="354dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fundamental_of_digital_marketing"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textSize="18sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textSize="18sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/newradious"
                android:backgroundTint="#79EDD3D3"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="354dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ccc"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="NILET"
                        android:textSize="18sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="December 2022"
                        android:textSize="18sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/newradious"
                android:backgroundTint="#79EDD3D3"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="354dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/website_development"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mind_luster"
                        android:textSize="18sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="August 2023"
                        android:textSize="18sp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>


    </ScrollView>


    <!--    <com.airbnb.lottie.LottieAnimationView-->
    <!--        android:id="@+id/loadanicyc"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginRight="25dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.444"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.377"-->
    <!--        app:lottie_autoPlay="true"-->
    <!--        app:lottie_loop="true"-->
    <!--        app:lottie_rawRes="@raw/comingsoon" />-->


</RelativeLayout>